2007-05-13  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_new): add a
	shortcut to the user's Pictures folder.

	* libgimpbase/xdg-user-dir.c: cosmetic changes.

2007-05-13  Sven Neumann  <sven@gimp.org>

	* plug-ins/help/gimp-help-lookup.c: include libgimpbase/gimpbase.h.

2007-05-13  Sven Neumann  <sven@gimp.org>

	* app/file/Makefile.am
	* app/file/xdg-user-dir.c[ch]: removed here ...

	* libgimpbase/Makefile.am
	* libgimpbase/xdg-user-dir.[ch]: ... and moved to libgimpbase.

	* libgimpbase/gimpbaseenums.[ch]: added GimpUserDirectory enum.

	* libgimpbase/gimpenv.[ch]: added new function to identify special
	user folders. Added Win32 specific code and use xdg_user_dir_lookup()
	on other platforms.

	* libgimp/gimpenums.c.tail
	* tools/pdbgen/enums.pl: regenerated.

	* libgimpbase/gimpbase.def: updated.

2007-05-11  Sven Neumann  <sven@gimp.org>

	* app/file/Makefile.am
	* app/file/file-procedure.[ch]
	* app/file/file-utils.[ch]: split functions dealing with file
	procedures into their own file and renamed them.

	* app/file/file-open.c
	* app/dialogs/file-save-dialog.c
	* app/actions/file-commands.c
	* app/widgets/gimpthumbbox.c
	* app/widgets/gimpdnd-xds.c
	* app/widgets/gimpimagepropview.c
	* tools/pdbgen/pdb/fileops.pdb: changed accordingly

        * app/pdb/fileops_cmds.c: regenerated.

2007-05-11  Karine Delvare  <edhel@gimp.org>

	* plug-ins/common/illusion.c: use the new preview transform function, 
	see bug #356716.

2007-05-11  Sven Neumann  <sven@gimp.org>

	* app/file/Makefile.am
	* app/file/xdg-user-dir.[ch]: added a slightly modified copy of
	xdg-user-dirs-lockup.c from freedesktop.org.

2007-05-11  Sven Neumann  <sven@gimp.org>

	* app/main.c (gimp_dbus_open): don't attempt the conversion if the
	argument is already an URI.

2007-05-11  Sven Neumann  <sven@gimp.org>

	* app/main.c (gimp_dbus_open): convert filenames to absolute file
	URIs before passing them to dbus_g_proxy_call().
